<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start_date_time">Start date and time</string>
    <string name="end_date_time">End date and time</string>
    <string name="register">Register on conference</string>
    <string name="add_to_personal_schedule">Add to personal schedule</string>
    <string name="category">Category</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="organiser">Organiser</string>
    <string name="speaker">Speaker</string>
    <string name="event_schedule">Event schedule</string>
    <string name="information">Information</string>
    <string name="schedule">Schedule</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>

    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="conference_detail">Conference</string>
    <string name="event">Event</string>
    <string name="statistics">Statistics</string>
    <string name="edit_conference">Edit conference</string>
    <string name="create_invite_link">Create invite link</string>
    <string name="tariff">Tariffs</string>
    <string name="map">Map</string>

    <string name="no_category">No category</string>
    <string name="society">Society</string>
    <string name="politics">Politics</string>
    <string name="economics">Economics</string>
    <string name="sport">Sport</string>
    <string name="culture">Culture</string>
    <string name="tech">Tech</string>
    <string name="science">Science</string>
    <string name="auto">Auto</string>
    <string name="others">Others</string>

    <string name="no_data">No data</string>
    <string name="link_info">Link to conference</string>
    <string name="link_created">Link copied into clipboard</string>
    <string name="price">Price:</string>
    <string name="sold">Sold: </string>
    <string name="limit">Registrations count: </string>
    <string name="registrations">Registrations</string>
    <string name="tickets">Tickets</string>
    <string name="added_to_schedule">Added to personal schedule</string>
</resources>