<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topNavigationAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:theme="@style/MyThemeOverlay_Toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@null"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/backButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="start"
                android:text="@string/event"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeEventContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topNavigationAppBar"
        app:layout_constraintBottom_toBottomOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/eventDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="#00000000">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.constraintlayout.utils.widget.ImageFilterView
                            android:id="@+id/organizerImage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="2dp"
                            android:src="@drawable/user_placeholder"
                            app:roundPercent="100"
                            android:layout_marginStart="8dp"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:layout_constraintLeft_toRightOf="@id/organizerImage"
                            app:layout_constraintTop_toTopOf="@id/organizerImage"
                            app:layout_constraintBottom_toBottomOf="@id/organizerImage"
                            app:layout_constraintRight_toRightOf="parent"
                            android:orientation="vertical"
                            android:layout_marginStart="5dp">
                            <TextView
                                android:id="@+id/organizerName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_data"
                                android:textSize="16sp"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                />

                            <TextView
                                android:id="@+id/shortInfoOrganizerTextBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_data"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_time"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/eventStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_time"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/eventEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/eventAddToPersonalSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_personal_schedule"
                    android:background="@color/purple_700"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    />
                <Button
                    android:id="@+id/eventScheduleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_schedule"
                    android:background="@color/purple_700"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>