<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.alex3645.feature_conference_detail.customUI.LockableScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detailScrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/imageConference"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:src="@drawable/picture_placeholder"
                android:scaleType="centerCrop"
                android:contentDescription="@string/no_data"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/conferenceDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/conferenceCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organiser"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.constraintlayout.utils.widget.ImageFilterView
                            android:id="@+id/organizerImage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="2dp"
                            android:src="@drawable/user_placeholder"
                            app:roundPercent="100"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:layout_constraintLeft_toRightOf="@id/organizerImage"
                            app:layout_constraintTop_toTopOf="@id/organizerImage"
                            app:layout_constraintBottom_toBottomOf="@id/organizerImage"
                            app:layout_constraintRight_toRightOf="parent"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:id="@+id/organizerName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_data"
                                android:textSize="16sp"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                />

                            <TextView
                                android:id="@+id/shortInfoOrganizerTextBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_data"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_time"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/conferenceStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_time"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/conferenceEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/toChatButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:background="@color/purple_700"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place"
                    android:textSize="16sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/conferencePlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/conferenceDetailMap"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    tools:context=".MapsActivity" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/registrationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@color/purple_700"
                    android:textColor="@color/white"
                    android:padding="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.alex3645.feature_conference_detail.customUI.LockableScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>