<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    tools:viewBindingIgnore="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topNavigationAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:theme="@style/MyThemeOverlay_Toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backButtonChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@null"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                android:contentDescription="@string/back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/backButtonChat"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="start"
                android:text="@string/chat"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.stfalcon.chatkit.messages.MessagesList
        android:id="@+id/messagesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topNavigationAppBar"
        app:layout_constraintBottom_toTopOf="@id/separateLine"
        android:layout_above="@+id/input"
        app:incomingAvatarHeight="56dp"
        app:incomingAvatarWidth="56dp"/>

    <View
        android:id="@+id/separateLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/input"
        android:layout_above="@+id/input"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/teal_700" />

    <com.stfalcon.chatkit.messages.MessageInput
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        app:attachmentButtonBackground="?attr/selectableItemBackgroundBorderless"
        app:attachmentButtonDefaultIconColor="@color/teal_700"
        app:attachmentButtonHeight="27dp"
        app:attachmentButtonWidth="27dp"
        app:inputButtonDefaultIconColor="@color/white"
        app:inputButtonDefaultIconDisabledColor="@color/white60"
        app:inputHint="@string/message"
        app:showAttachmentButton="true" />

</androidx.constraintlayout.widget.ConstraintLayout>